--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- Skeleton CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
+      type="text/css"
+      rel="stylesheet"
+    />
+
+    <title>WD Starter Kit</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
